[package]
name = "nokhwa_rust_video_cross"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"

[dependencies.nokhwa]
version = "0.9.4"
# Use the native input backends, enable WGPU integration
features = ["input-v4l", "output-wgpu"]